--- a/index.html
+++ b/index.html
@@ -1,50 +1,81 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title></title>
+    <link href="./normalize.css" rel="stylesheet" media="all" />
+    <link href="https://tech.hh.ru/bloko/styles/css/blocks/icon.css" rel="stylesheet" media="all" />
+    <link href="./styles.css" rel="stylesheet" media="all" />
 </head>
-<body>
-<div class="modal-wrapper">
-    <div class="modal">
-        <div class="contact-info">
-        <div class="contact-info-item">
-                        <div class="contact-info-item__icon">
-                    <span class="bloko-icon bloko-icon_mail-outline bloko-icon_initial-inverted"></span>
+
+<body class="page_body">
+    <div class="modal-wrapper">
+        <div class="modal">
+            <div class="contact-info">
+                <div class="contact-info-item">
+                    <div class="contact-info-item__icon">
+                        <span class="bloko-icon bloko-icon_change-position bloko-icon_initial-inverted"></span>
+                    </div>
+
+                    <div class="contact-info-item__content">
+                        <div class="contact-info-item__title">Адрес</div>
+                        <div class="contact-info-item__text">Москва, Годовикова 9/10</div>
+                    </div>
                 </div>
 
-                <div class="contact-info-item__content">
-                    <div class="contact-info-item__title">Адрес</div>
-                    <div class="contact-info-item__text">Москва, Годовикова 9/10</div>
+                <div class="contact-info-item">
+                    <div class="contact-info-item__icon">
+                        <span class="bloko-icon bloko-icon_phone bloko-icon_initial-inverted"></span>
+                    </div>
+
+                    <div class="contact-info-item__content">
+                        <div class="contact-info-item__title">Давайте поговорим</div>
+                        <a href="tel:+78001236879" class="contact-info-item__link">+7 800 1236879</a>
+                    </div>
+                </div>
+
+                <div class="contact-info-item">
+                    <div class="contact-info-item__icon">
+                        <span class="bloko-icon bloko-icon_mail-outline bloko-icon_initial-inverted"></span>
+                    </div>
+
+                    <div class="contact-info-item__content">
+                        <div class="contact-info-item__title">Служба поддержки</div>
+                        <a href="mailto:support@example.com" class="contact-info-item__link">support@example.com</a>
+                    </div>
                 </div>
             </div>
+            
+            <form class="contact-form">
+                <h2 class="contact-form-title">Напишите нам сообщение</h2>
 
-            <div class="contact-info-item">
-                <div class="contact-info-item__icon">
-                    <span class="bloko-icon bloko-icon_mail-outline bloko-icon_initial-inverted"></span>
+                <div class="contact-form-item">
+                    <div class="contact-form-item__title">Укажите фамилию и имя</div>
+                    <div class="contact-form-item__full-name">
+                        <input type="text" class="contact-form-item__input" placeholder="Имя">
+                        <input type="text" class="contact-form-item__input" placeholder="Фамилия">
+                    </div>
                 </div>
 
-                <div class="contact-info-item__content">
-                    <div class="contact-info-item__title">Давайте поговорим</div>
-                    <a href="tel:+78001236879" class="contact-info-item__link">+7 800 1236879</a>
-                </div>
-            </div>
-
-            <div class="contact-info-item">
-                <div class="contact-info-item__icon">
-                    <span class="bloko-icon bloko-icon_mail-outline bloko-icon_initial-inverted"></span>
+                <div class="contact-form-item">
+                    <div class="contact-form-item__title">Адрес электронной почты</div>
+                    <input type="email" class="contact-form-item__input" placeholder="example@email.com">
                 </div>
 
-                <div class="contact-info-item__content">
-                    <div class="contact-info-item__title">Служба поддержки</div>
-                    <a href="mailto:support@example.com" class="contact-info-link">support@example.com</a>
+                <div class="contact-form-item">
+                    <div class="contact-form-item__title">Номер телефона</div>
+                    <input type="tel" class="contact-form-item__input" placeholder="+7 800 000000">
                 </div>
-            </div>
+
+                <div class="contact-form-item">
+                    <div class="contact-form-item__title">Сообщение</div>
+                    <textarea class="contact-form-item__user-message"></textarea>
+                    <button type="submit" name="send" class="contact-form-item__button">Отправить сообщение</button>                    
+                </div>
+            </form>
         </div>
-        <form class="contact-form">
-            <h2 class="contact-form-title">Напишите нам сообщение</h2>
-        </form>
     </div>
-</div>
 </body>
+
 </html>
